# ecs-grpc

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  deploy_images.sh  go.mod  main.tf
.circleci/: config.yml
.docker/: config.json
modules/app/: alb.tf  client.tf  data.tf  security.tf  server.tf  task_def_client.json.tpl  task_def_server.json.tpl  variable.tf
modules/infra/: main.tf  variable.tf
modules/mesh/: mesh.tf  node.tf  node_server.yaml  router.tf  router.yaml  service.tf  variable.tf
scripts/: build.sh  ci_trigger.sh  search_target_services.sh
services/color_client/: BUILD.bazel  Dockerfile  main.go
services/color_server/: BUILD.bazel  Dockerfile  main.go
services/color_server/color/: BUILD.bazel
